--- a/src/utils/variables.css
+++ b/src/utils/variables.css
@@ -1,6 +1,7 @@
 body {
   --primary-10: #e0f4f3;
   --primary-20: #c4eae7;
+  --primary-30: #afe0dd;
   --primary-40: #35a099;
   --primary-50: #26827c;
   --primary-60: #13706d;
