--- a/src/utils/variables.css
+++ b/src/utils/variables.css
@@ -18,6 +18,7 @@ body {
   --neutral-10: #f9f7f8;
   --neutral-20: #eae5e8;
   --neutral-30: #d5cdd2;
+  --neutral-40: #83777f;
   --neutral-50: #6a5f66;
   --neutral-60: #5a5057;
   --neutral-70: #3a3236;
