feat: New comparateur

--- a/src/utils/variables.css
+++ b/src/utils/variables.css
@@ -20,6 +20,7 @@
   --neutral-60: #5a5057;
   --neutral-70: #3a3236;
   --neutral-80: #110d10;
+  --neutral-100: #000000;
 
   --primary-10: #e0f4f3;
   --primary-20: #c4eae7;
@@ -89,6 +90,7 @@
   --neutral-60: #d5d0d3;
   --neutral-70: #e2dfe0;
   --neutral-80: #f5f5f5;
+  --neutral-100: #ffffff;
 
   --primary-10: #041f1d;
   --primary-20: #113a38;
