--- a/src/components/comparateur/Tile.module.css
+++ b/src/components/comparateur/Tile.module.css
@@ -1,6 +1,6 @@
 .secondaryTile,
 .tile {
-  width: 11rem;
+  width: calc(11rem - 4px);
   min-height: 224px;
   padding: 1.5rem 1rem;
   position: relative;
@@ -61,22 +61,37 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 0.5rem;
-  color: var(--secondary-50);
+  padding: 0.375rem;
+  border-radius: 8px;
+  color: var(--primary-50);
   background-color: transparent;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
-    color: var(--secondary-60);
+    color: var(--primary-60);
+    background-color: var(--primary-10);
+  }
+
+  &:active {
+    color: var(--primary-70);
+    background-color: var(--primary-20);
   }
 
   &:focus {
-    outline: 3px solid var(--secondary-40);
+    outline: 3px solid var(--primary-40);
     outline-offset: 2px;
   }
 
   &:focus:not(:focus-visible) {
     outline: none;
+  }
+
+  svg {
+    width: 0.75rem;
+    height: 0.75rem;
   }
 }
