--- a/src/components/comparateur/Tiles.module.css
+++ b/src/components/comparateur/Tiles.module.css
@@ -5,6 +5,10 @@
   gap: 1rem;
 }
 
-.button {
-  margin: 1.5rem auto 0 auto;
+.buttons {
+  display: flex;
+  gap: 0.75rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 1.5rem;
 }
