feat: add etiquettes

--- a/src/components/comparateur/Comparateur.module.css
+++ b/src/components/comparateur/Comparateur.module.css
@@ -32,6 +32,11 @@
   margin: auto;
 }
 
+.descriptionValue {
+  color: var(--primary-60);
+  font-weight: 700;
+}
+
 .inputContainer {
   position: relative;
   margin: auto;
