--- a/src/components/comparateur/overscreens/Category.module.css
+++ b/src/components/comparateur/overscreens/Category.module.css
@@ -80,3 +80,11 @@
     height: 1.5rem;
   }
 }
+
+.comparison {
+  padding: 1.25rem 0.75rem 0.75rem 0.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+}
