--- a/src/components/externalModules/shopify/Equivalent.module.css
+++ b/src/components/externalModules/shopify/Equivalent.module.css
@@ -1,8 +1,3 @@
-.title {
-  font-size: 0.875em;
-  margin-bottom: 0.75em;
-}
-
 .container {
   border-radius: 8px;
   border: 1px solid var(--neutral-30);
@@ -26,7 +21,6 @@
 .right {
   position: relative;
   border-radius: 0 8px 8px 0;
-  padding: 0.75em 1.25em;
   background-color: var(--neutral-00);
   color: var(--neutral-50);
 }
@@ -52,7 +46,6 @@
   padding: 0 0.75em;
   height: 100%;
   border-right: 1px solid var(--primary-20);
-
   color: var(--primary-50);
 
   > svg {
@@ -64,4 +57,23 @@
   font-size: 1.25em;
   line-height: 1.2;
   font-weight: 700;
+}
+
+.comparisons {
+  display: flex;
+  align-items: stretch;
+}
+
+.comparison {
+  padding: 0.75em 1.25em;
+
+  &:not(:last-child) {
+    border-right: 1px solid var(--neutral-30);
+  }
+}
+
+.label {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1rem;
 }
