--- a/src/components/comparateur/Comparateur.module.css
+++ b/src/components/comparateur/Comparateur.module.css
@@ -135,3 +135,15 @@
     display: none;
   }
 }
+
+.equivalentLink {
+  margin-top: 1rem;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+
+  @media screen and (max-width: 700px) {
+    display: flex;
+  }
+}
