--- a/src/components/externalModules/SimpleValue.module.css
+++ b/src/components/externalModules/SimpleValue.module.css
@@ -1,25 +1,25 @@
 .container {
   display: flex !important;
-  align-items: center;
-  height: 100%;
-  gap: 8px;
+  align-items: center !important;
+  height: 100% !important;
+  gap: 8px !important;
 }
 
 .emoji {
-  font-size: 2em;
-  line-height: 1;
+  font-size: 2em !important;
+  line-height: 1 !important;
 }
 
 .label {
-  color: var(--neutral-50);
-  font-size: 0.75rem;
-  font-weight: 400;
-  line-height: 1rem;
+  color: var(--neutral-50) !important;
+  font-size: 0.75rem !important;
+  font-weight: 400 !important;
+  line-height: 1rem !important;
 }
 
 .equivalentValue {
-  font-size: 1.25em;
-  line-height: 1.2;
-  font-weight: 700;
-  color: var(--neutral-80);
+  font-size: 1.25em !important;
+  line-height: 1.2 !important;
+  font-weight: 700 !important;
+  color: var(--neutral-80) !important;
 }
