--- a/src/components/externalModules/Logo.module.css
+++ b/src/components/externalModules/Logo.module.css
@@ -1,27 +1,27 @@
 .reverseLogo,
 .logo {
   display: flex !important;
-  align-items: center;
-  padding: 0 0.75rem;
-  height: auto;
-  color: var(--primary-50);
-  background-color: var(--primary-10);
+  align-items: center !important;
+  padding: 0 0.75rem !important;
+  height: auto !important;
+  color: var(--primary-50) !important;
+  background-color: var(--primary-10) !important;
 
   &:hover {
-    color: var(--primary-60);
+    color: var(--primary-60) !important;
   }
 
   > svg {
-    height: 100%;
+    height: 100% !important;
   }
 }
 
 .logo {
-  border-right: 1px solid var(--primary-20);
-  border-radius: 8px 0 0 8px;
+  border-right: 1px solid var(--primary-20) !important;
+  border-radius: 8px 0 0 8px !important;
 }
 
 .reverseLogo {
-  border-left: 1px solid var(--primary-20);
-  border-radius: 0 8px 8px 0;
+  border-left: 1px solid var(--primary-20) !important;
+  border-radius: 0 8px 8px 0 !important;
 }
