--- a/src/components/externalModules/shopify/Equivalent.module.css
+++ b/src/components/externalModules/shopify/Equivalent.module.css
@@ -1,132 +1,119 @@
 .animatedContainer,
 .container {
-  border-radius: 8px;
-  border: 1px solid var(--neutral-30);
+  border-radius: 8px !important;
+  border: 1px solid var(--neutral-30) !important;
   display: flex !important;
-  width: fit-content;
-  line-height: 1.25rem;
-  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06);
+  width: fit-content !important;
+  line-height: 1.25rem !important;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06) !important;
 }
 
 .animatedContainer {
-  border-radius: 8px 0 0 8px;
+  border-radius: 8px 0 0 8px !important;
 }
 
 .left,
 .top {
   display: flex !important;
-  align-items: stretch;
-  border-radius: 8px 0 0 8px;
-  gap: 0.75em;
-  background-color: var(--primary-10);
-  color: var(--primary-70);
+  align-items: stretch !important;
+  border-radius: 8px 0 0 8px !important;
+  gap: 0.75em !important;
+  background-color: var(--primary-10) !important;
+  color: var(--primary-70) !important;
 }
 
 .left {
-  border-right: 1px solid var(--primary-30);
+  border-right: 1px solid var(--primary-30) !important;
 }
 
 .top {
-  border-radius: 8px 8px 0 0;
-  border-bottom: 1px solid var(--primary-30);
+  border-radius: 8px 8px 0 0 !important;
+  border-bottom: 1px solid var(--primary-30) !important;
 }
 
 .leftContent {
-  padding: 0.75em 1.25rem 0.75rem 0;
-  margin: auto;
+  padding: 0.75em 1.25rem 0.75rem 0 !important;
+  margin: auto !important;
 }
 
 .rightColumn,
 .right {
-  position: relative;
-  border-radius: 0 8px 8px 0;
-  background-color: var(--neutral-00);
-  color: var(--neutral-50);
+  position: relative !important;
+  border-radius: 0 8px 8px 0 !important;
+  background-color: var(--neutral-00) !important;
+  color: var(--neutral-50) !important;
 }
 
 .rightColumn {
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 8px 8px !important;
 }
 
 .equalColumn,
 .equal {
-  left: -0.625em;
-  top: 0.875em;
-  border: 1px solid var(--primary-30);
-  border-radius: 50%;
-  background-color: var(--neutral-00);
-  color: var(--primary-40);
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 1.25em;
-  width: 1.25em;
+  left: -0.625em !important;
+  top: 0.875em !important;
+  border: 1px solid var(--primary-30) !important;
+  border-radius: 50% !important;
+  background-color: var(--neutral-00) !important;
+  color: var(--primary-40) !important;
+  position: absolute !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  height: 1.25em !important;
+  width: 1.25em !important;
 }
 
 .equalColumn {
-  top: 0;
-  left: 0.875em;
-  transform: translateY(-50%);
-}
-
-.logo {
-  display: flex !important;
-  align-items: center;
-  padding: 0 0.75em;
-  height: 100%;
-  border-right: 1px solid var(--primary-20);
-  color: var(--primary-50);
-
-  > svg {
-    height: 3em;
-  }
+  top: 0 !important;
+  left: 0.875em !important;
+  transform: translateY(-50%) !important;
 }
 
 .value {
-  font-size: 1.25em;
-  line-height: 1.2;
-  font-weight: 700;
+  font-size: 1.25em !important;
+  line-height: 1.2 !important;
+  font-weight: 700 !important;
 }
 
 .animatedComparisons {
-  display: grid;
+  display: grid !important;
 }
 
 .comparisonsColumn,
 .comparisons {
-  display: flex;
-  align-items: stretch;
+  display: flex !important;
+  align-items: stretch !important;
 }
 
 .comparisonsColumn {
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .comparison,
 .visibleAnimatedComparison,
 .animatedComparison {
-  padding: 0.75em 1.25em;
+  padding: 0.75em 1.25em !important;
 }
 
 .comparison:not(:last-child) {
-  border-right: 1px solid var(--neutral-30);
+  border-right: 1px solid var(--neutral-30) !important;
 }
 
 .visibleAnimatedComparison,
 .animatedComparison {
-  grid-column: 1;
-  grid-row: 1;
-  width: max-content;
-  opacity: 0;
+  grid-column: 1 !important;
+  grid-row: 1 !important;
+  width: max-content !important;
+  opacity: 0 !important;
 }
 
 .visibleAnimatedComparison {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 .label {
-  font-size: 0.75rem;
-  font-weight: 400;
-  line-height: 1rem;
+  font-size: 0.75rem !important;
+  font-weight: 400 !important;
+  line-height: 1rem !important;
 }
