--- a/src/components/comparateur/Etiquettes.module.css
+++ b/src/components/comparateur/Etiquettes.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  margin-top: 2.5rem;
+  margin: 5rem 0 3rem 0;
 }
 
 .title {
@@ -17,7 +17,7 @@
 }
 
 .simulator {
-  margin-top: 3rem;
+  margin-top: 5rem;
 }
 
 .simulatorContent {
