--- a/src/components/layout/web/Footer.module.css
+++ b/src/components/layout/web/Footer.module.css
@@ -189,6 +189,7 @@
   max-width: 25rem;
   p {
     margin-bottom: 0;
+    margin-top: 0.5rem;
   }
   @media screen and (max-width: 36em) {
     margin: 1.5rem 0 1.5rem 0;
