--- a/src/components/externalModules/SimpleValue.module.css
+++ b/src/components/externalModules/SimpleValue.module.css
@@ -3,6 +3,7 @@
   align-items: center !important;
   height: 100% !important;
   gap: 8px !important;
+  text-align: left !important;
 }
 
 .emoji {
