--- a/src/components/externalModules/Logo.module.css
+++ b/src/components/externalModules/Logo.module.css
@@ -1,11 +1,13 @@
 .reverseLogo,
 .logo {
+  width: fit-content !important;
   display: flex !important;
   align-items: center !important;
   padding: 0 0.75rem !important;
   height: auto !important;
   color: var(--primary-50) !important;
   background-color: var(--primary-10) !important;
+  box-shadow: none !important;
 
   &:hover {
     color: var(--primary-60) !important;
@@ -24,4 +26,8 @@
 .reverseLogo {
   border-left: 1px solid var(--primary-20) !important;
   border-radius: 0 8px 8px 0 !important;
+}
+
+.padding {
+  padding: 0.75rem !important;
 }
