--- a/src/components/externalModules/shopify/ColumnEquivalent.module.css
+++ b/src/components/externalModules/shopify/ColumnEquivalent.module.css
@@ -1,6 +1,7 @@
 .container {
   border-radius: 8px;
   border: 1px solid var(--neutral-30);
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06) !important;
 }
 
 .leftContent {
