--- a/src/components/comparateur/Comparateur.module.css
+++ b/src/components/comparateur/Comparateur.module.css
@@ -55,7 +55,7 @@
 
 .greenSuffix,
 .suffix {
-  max-width: 66%;
+  max-width: 300px;
   position: absolute;
   right: 1rem;
   top: 50%;
@@ -65,6 +65,14 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+
+  @media screen and (max-width: 700px) {
+    max-width: 200px;
+  }
+
+  @media screen and (max-width: 400px) {
+    max-width: 150px;
+  }
 }
 
 .greenSuffix {
