fix: equivalent precision

--- a/src/components/externalModules/SimpleValue.module.css
+++ b/src/components/externalModules/SimpleValue.module.css
@@ -1,4 +1,5 @@
 .container {
+  font-size: initial !important;
   display: flex !important;
   align-items: center !important;
   height: 100% !important;
@@ -11,27 +12,17 @@
   line-height: 1 !important;
 }
 
-.bigLabel,
 .label {
   color: var(--neutral-50) !important;
-  font-size: 0.75rem !important;
+  font-size: 0.75em !important;
   font-weight: 400 !important;
-  line-height: 1rem !important;
-  max-width: 11rem !important;
+  line-height: 1em !important;
+  max-width: 11em !important;
 }
 
-.bigLabel {
-  font-size: 1.25rem !important;
-}
-
-.bigEquivalentValue,
 .equivalentValue {
   font-size: 1.25em !important;
   line-height: 1.2 !important;
   font-weight: 700 !important;
   color: var(--neutral-80) !important;
-}
-
-.bigEquivalentValue {
-  font-size: 1.75rem !important;
 }
