--- a/src/components/externalModules/detection/Detector.module.css
+++ b/src/components/externalModules/detection/Detector.module.css
@@ -4,12 +4,13 @@
 }
 
 .etiquette {
+  font-size: initial !important;
   position: absolute !important;
   left: 50% !important;
   transform: translateX(-50%) !important;
   width: max-content !important;
   height: fit-content !important;
-  padding: 0 2rem 0 0 !important;
+  padding: 0 2em 0 0 !important;
   border: 1px solid var(--neutral-30) !important;
   background-color: var(--neutral-00) !important;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06) !important;
@@ -41,7 +42,7 @@
   background-color: var(--primary-10) !important;
   color: var(--primary-60) !important;
   font-weight: 500 !important;
-  padding: 0 0.5rem !important;
+  padding: 0 0.5em !important;
   border: none !important;
   border-radius: 4px !important;
   cursor: pointer !important;
@@ -56,7 +57,7 @@
 }
 
 .simpleValue {
-  padding: 1rem 0 !important;
+  padding: 1em 0 !important;
 }
 
 .random {
