fix: padding in input

--- a/src/components/comparateur/Comparateur.module.css
+++ b/src/components/comparateur/Comparateur.module.css
@@ -48,7 +48,7 @@
   input {
     font-size: 1.75rem;
     font-weight: 700;
-    padding: 0.5rem 7rem 0.5rem 1rem;
+    padding: 0.5rem 1rem;
     text-align: left;
   }
 }
