--- a/src/components/layout/web/Footer.module.css
+++ b/src/components/layout/web/Footer.module.css
@@ -27,6 +27,10 @@
   }
 }
 
+.logos {
+  display: flex;
+}
+
 .neutral50 {
   color: var(--neutral-50);
 }
@@ -55,45 +59,12 @@
 }
 
 .gridOne {
-  display: grid;
-  grid-column: span 4;
-  @media screen and (max-width: 72em) {
-    grid-column: span 3;
-  }
-  @media screen and (max-width: 48em) {
-    grid-column: span 6;
-  }
-  grid-template-columns: repeat(5, 1fr);
-}
-.gridOneA {
-  align-items: center;
   display: flex;
-  grid-column: span 2;
   @media screen and (max-width: 72em) {
-    grid-column: span 5;
+    flex-direction: column;
   }
 }
-.gridOneB {
-  align-items: center;
-  display: flex;
-  grid-column: span 3;
-  @media screen and (max-width: 72em) {
-    grid-column: span 5;
-    padding-bottom: 1.5rem;
-    padding-top: 4rem;
-  }
-  @media screen and (max-width: 60em) {
-    padding-bottom: 2rem;
-  }
-  @media screen and (max-width: 48em) {
-    padding-top: 3rem;
-    padding-bottom: 2rem;
-  }
-  @media screen and (max-width: 36em) {
-    padding-bottom: 1rem;
-    padding-top: 1rem;
-  }
-}
+
 .gridTwoA {
   align-items: center;
   display: flex;
@@ -188,11 +159,8 @@
     margin-bottom: 0;
     margin-top: 0.5rem;
   }
-  @media screen and (max-width: 36em) {
-    margin: 1.5rem 0 1.5rem 0;
-  }
   @media screen and (max-width: 72em) {
-    margin-left: 0;
+    margin: 1.5rem 0 1.5rem 0;
   }
 }
 
