--- a/src/components/layout/web/Footer.module.css
+++ b/src/components/layout/web/Footer.module.css
@@ -1,30 +1,6 @@
 .wrapper {
   margin-top: 0;
   margin-bottom: 0;
-  .gridlinks {
-    border-top: 1px solid var(--neutral-20);
-    a {
-      border-right: 1px solid var(--neutral-20);
-      @media screen and (max-width: 36em) {
-        border-right: none;
-      }
-      color: var(--neutral-50);
-      padding-right: 1.5rem;
-    }
-    a.last {
-      border-right: none;
-    }
-    a:hover {
-      color: var(--neutral-80);
-    }
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
-    @media screen and (max-width: 36em) {
-      flex-direction: column;
-    }
-    padding-top: 1.5rem;
-  }
 }
 
 .logos {
@@ -143,24 +119,46 @@
     border-bottom: 1px solid var(--neutral-20);
   }
 }
-
+.footerLinks {
+  list-style: none;
+  padding-left: 0;
+  border-top: 1px solid var(--neutral-20);
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+  @media screen and (max-width: 36em) {
+    flex-direction: column;
+  }
+  padding-top: 1.5rem;
+}
 .footerLink {
   a {
     display: flex;
     align-items: center;
-    color: var(--neutral-80);
+    color: var(--neutral-50);
     cursor: pointer;
     font-size: 0.75rem;
     font-weight: 400;
     letter-spacing: 0em;
     text-decoration: none;
     padding-left: 1.5rem;
+    padding-right: 1.5rem;
     @media screen and (max-width: 36em) {
       padding-left: 0;
+    }
+    border-right: 1px solid var(--neutral-20);
+    @media screen and (max-width: 36em) {
+      border-right: none;
     }
   }
   a.first {
     padding-left: 0;
+  }
+  a.last {
+    border-right: none;
+  }
+  a:hover {
+    color: var(--neutral-80);
   }
   svg {
     height: 12px;
