--- a/src/components/externalModules/shopify/Equivalent.module.css
+++ b/src/components/externalModules/shopify/Equivalent.module.css
@@ -49,6 +49,7 @@
   border-radius: 0 0 8px 8px !important;
 }
 
+.animatedEqual,
 .equalColumn,
 .equal {
   top: 1em !important;
@@ -73,6 +74,11 @@
   top: 0 !important;
   left: 0.875em !important;
   transform: translateY(-50%) !important;
+}
+
+.equal,
+.equalColumn {
+  border: 1px solid var(--primary-30) !important;
 }
 
 .value {
