--- a/src/components/comparateur/Tiles.module.css
+++ b/src/components/comparateur/Tiles.module.css
@@ -12,3 +12,37 @@
   justify-content: center;
   margin-top: 1.5rem;
 }
+
+.tileContainer {
+  width: calc(11rem - 4px);
+  height: 248px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.background {
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.3;
+  background-color: var(--secondary-10);
+}
+
+.tile,
+.disapearingTile {
+  overflow: hidden;
+  transition: all 0.2s linear;
+  visibility: visible;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.disapearingTile {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(85%);
+}
