feat: New design

--- a/src/utils/fonts.css
+++ b/src/utils/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Light.woff') format('woff'),
-    url('/fonts/Marianne-Light.woff2') format('woff2');
+    url('/fonts/Marianne-Light.woff2') format('woff2'),
+    url('/fonts/Marianne-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -11,8 +11,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Light_Italic.woff') format('woff'),
-    url('/fonts/Marianne-Light_Italic.woff2') format('woff2');
+    url('/fonts/Marianne-Light_Italic.woff2') format('woff2'),
+    url('/fonts/Marianne-Light_Italic.woff') format('woff');
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -21,8 +21,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Regular.woff') format('woff'),
-    url('/fonts/Marianne-Regular.woff2') format('woff2');
+    url('/fonts/Marianne-Regular.woff2') format('woff2'),
+    url('/fonts/Marianne-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -31,8 +31,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Regular_Italic.woff') format('woff'),
-    url('/fonts/Marianne-Regular_Italic.woff2') format('woff2');
+    url('/fonts/Marianne-Regular_Italic.woff2') format('woff2'),
+    url('/fonts/Marianne-Regular_Italic.woff') format('woff');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -41,8 +41,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Medium.woff') format('woff'),
-    url('/fonts/Marianne-Medium.woff2') format('woff2');
+    url('/fonts/Marianne-Medium.woff2') format('woff2'),
+    url('/fonts/Marianne-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -51,8 +51,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Medium_Italic.woff') format('woff'),
-    url('/fonts/Marianne-Medium_Italic.woff2') format('woff2');
+    url('/fonts/Marianne-Medium_Italic.woff2') format('woff2'),
+    url('/fonts/Marianne-Medium_Italic.woff') format('woff');
   font-weight: 500;
   font-style: italic;
   font-display: swap;
@@ -61,8 +61,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Bold.woff') format('woff'),
-    url('/fonts/Marianne-Bold.woff2') format('woff2');
+    url('/fonts/Marianne-Bold.woff2') format('woff2'),
+    url('/fonts/Marianne-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -71,8 +71,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-Bold_Italic.woff') format('woff'),
-    url('/fonts/Marianne-Bold_Italic.woff2') format('woff2');
+    url('/fonts/Marianne-Bold_Italic.woff2') format('woff2'),
+    url('/fonts/Marianne-Bold_Italic.woff') format('woff');
   font-weight: 700;
   font-style: italic;
   font-display: swap;
@@ -81,8 +81,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-ExtraBold.woff') format('woff'),
-    url('/fonts/Marianne-ExtraBold.woff2') format('woff2');
+    url('/fonts/Marianne-ExtraBold.woff2') format('woff2'),
+    url('/fonts/Marianne-ExtraBold.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -91,8 +91,8 @@
 @font-face {
   font-family: 'Marianne';
   src:
-    url('/fonts/Marianne-ExtraBold_Italic.woff') format('woff'),
-    url('/fonts/Marianne-ExtraBold_Italic.woff2') format('woff2');
+    url('/fonts/Marianne-ExtraBold_Italic.woff2') format('woff2'),
+    url('/fonts/Marianne-ExtraBold_Italic.woff') format('woff');
   font-weight: 900;
   font-style: italic;
   font-display: swap;
