--- a/src/components/layout/web/Footer.module.css
+++ b/src/components/layout/web/Footer.module.css
@@ -1,98 +1,127 @@
-.neutral50 {
-  color: var(--neutral-50);
+.footer {
+  position: relative;
+
+  a {
+    font-weight: 500;
+    text-decoration: none;
+    color: var(--neutral-70);
+  }
+
+  a:hover {
+    color: var(--primary-50);
+  }
+}
+
+.header {
+  position: absolute;
+  border-radius: 200px;
+  background-color: var(--neutral-00);
+  border: 2px solid var(--primary-30);
+  width: 308px;
+  height: 80px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.logos {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  background-color: var(--neutral-00);
+  justify-content: center;
+  display: flex;
+  gap: 2.75rem;
+  margin-bottom: 2.5rem;
+
+  svg {
+    height: 66px;
+  }
 }
 
 .linkContainer {
   display: flex;
   flex-direction: column;
+  gap: 0.625rem;
 
-  a {
-    color: var(--neutral-70);
-    cursor: pointer;
-    text-decoration: none;
-    margin-top: 0.25rem;
-  }
-
-  a:hover {
-    text-decoration: underline;
+  @media screen and (max-width: 48rem) {
+    a {
+      &:not(:last-child) {
+        padding-bottom: 0.5rem;
+        border-bottom: 1px solid var(--neutral-20);
+      }
+    }
   }
 }
 
 .internalContainer {
-  border-top: 1px solid var(--neutral-20);
   display: flex;
-  justify-content: center;
-  padding: 3rem 0;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 2rem;
-}
-
-.followNews {
-  color: var(--neutral-70);
-  font-weight: 500;
-  margin-top: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
-
-  svg {
-    height: 18px;
-    width: 18px;
-  }
+  gap: 2.5rem 0;
+  margin: 5rem 0;
 }
 
 .footerExplain {
-  max-width: 25rem;
-
-  p {
-    margin-bottom: 0;
-    margin-top: 0.5rem;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.25rem;
+  max-width: 22.5rem;
+  color: var(--neutral-50);
 }
 
 .topLinks {
   display: flex;
-  gap: 3rem;
+  justify-content: space-between;
+  gap: 2.5rem;
+  color: var(--neutral-70);
+
+  a {
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  @media screen and (max-width: 48rem) {
+    width: 100%;
+
+    > div {
+      width: calc(50% - 1.25rem);
+    }
+  }
+
+  @media screen and (max-width: 29.875rem) {
+    flex-wrap: wrap;
+
+    > div {
+      width: 100%;
+    }
+  }
+}
+
+.linkTitle {
+  margin: 1.25rem 0;
+  font-weight: 700;
+  color: var(--neutral-80);
 }
 
 .bottomLinks {
   border-top: 1px solid var(--neutral-20);
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  padding: 1rem;
-  gap: 0.5rem;
+  justify-content: flex-start;
+  padding: 1rem 0;
+  gap: 0.75rem;
 }
 
 .bottomLink {
-  border-right: 1px solid var(--neutral-20);
-  display: flex;
-  align-items: center;
-  color: var(--neutral-50);
-  cursor: pointer;
-  font-size: 0.75rem;
-  font-weight: 400;
-  letter-spacing: 0em;
-  text-decoration: none;
-  padding-right: 0.5rem;
+  color: var(--neutral-50) !important;
+  font-size: 0.875rem;
+  font-weight: 400 !important;
 
-  &:last-child {
-    border-right: none;
-    padding-right: 0;
-  }
-
-  &:hover {
-    color: var(--neutral-80);
-  }
-
-  svg {
-    height: 12px;
-    margin-left: 0.25rem;
-    width: 12px;
+  &:not(:last-child) {
+    padding-right: 0.75rem;
+    border-right: 1px solid var(--neutral-20);
   }
 }
